[package]
name = "pinginator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.13", features = ["derive"] }
pnet = "0.34.0"
socket2 = { version = "0.5.5", features = ["all"] }
thiserror = "1.0.56"
